--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -70,11 +70,11 @@
   <form method="POST" action="/register">
     <div class="form-group">
       <label for="username">Name</label>
-      <input type="text" id="username" name="username" placeholder="请输入用户名" required>
+      <input type="text" id="username" name="username" placeholder="Enter your user name" required>
     </div>
     <div class="form-group">
       <label for="password">password</label>
-      <input type="password" id="password" name="password" placeholder="请输入密码" required>
+      <input type="password" id="password" name="password" placeholder="Enter your password" required>
     </div>
     <button type="submit" class="btn">register</button>
   </form>
